--- a/README
+++ b/README
@@ -7,6 +7,9 @@ Peter Gassner
 peter@naehrstoff.ch
 http://www.naehrstoff.ch/code/photo-promenade
 
+Benjamin Wiederkehr
+benjamin.wiederkehr@artillery.ch
+http://www.artillery.ch
 
 2. INSTALLATION
 =======================================================
